--- a/variants/AncMed/resources/style.css
+++ b/variants/AncMed/resources/style.css
@@ -5,7 +5,7 @@
 .variantAncMed .country2 { color: rgb(234, 235, 168) ! important; } /* Egypt    */
 .variantAncMed .country3 { color: rgb(150, 193, 144) ! important; } /* Greece   */
 .variantAncMed .country4 { color: rgb(210, 66, 167) ! important; } /* Persia   */
-.variantAncMed .country5 { color: rgb(255, 80, 80) ! important; } /* Rome     */
+.variantAncMed .country5 { color: rgb(232, 107, 107) ! important; } /* Rome     */
 
 .variantAncMed .occupationBar1 { background-color: #79AFC6; } /* Carthage */
 .variantAncMed .occupationBar2 { background-color: #EAEAAF; } /* Egypt    */
